[package]
name = "gn-sig"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = ["std"]
std = [
    "gn-common/std",
    "parity-scale-codec/std",
    "serde",
    "scale-info/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../gn-common", default-features = false }
# general
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

# substrate primitives
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
