[package]
name = "gn-sig"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = ["std"]
std = [
    "gn-common/std",
    "parity-scale-codec/std",
    "serde",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../gn-common", default-features = false }
# general
ecdsa = { version = "0.16", default-features = false }
p256 = { version = "0.13.2", default-features = false, features = ["ecdsa"] }
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }
secp256k1 = { version = "0.26.0", default-features = false, features = ["alloc", "recovery"] }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }

# substrate primitives
sp-core = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
base64 = "0.21"
ethers = "1.0.2"
futures = "0.3.25"
hex = "0.4"
