[package]
name = "gn-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1.7"
gn-client = { path = "../gn-client", default-features = false, features = ["wasm"] }
gn-common = { path = "../gn-common" }
hex = "0.4.3"
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
gn-test-data = { path = "../gn-test-data" }
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.24"
