[package]
name = "gn-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
queries = []

[dependencies]
# local
gn-client = { version = "0.0.0-alpha", path = "../gn-client", default-features = false, features = ["wasm"] }
gn-common = { version = "0.0.0-alpha", path = "../gn-common", default-features = false }
gn-engine = { version = "0.0.0-alpha", path = "../gn-engine", default-features = false }

# general
serde-wasm-bindgen = "0.4.5"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
# local
gn-test-data = { path = "../gn-test-data" }

# general
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-test = "0.3.24"
