[package]
name = "guild-network-client"
version = "0.1.0"
edition = "2021"

[features]
external-oracle = []

[dependencies]
anyhow = "1"
futures = "0.3.25"
log = { version = "0.4.17", default-features = false }
guild-network-common = { path = "../guild-network-common" }
guild-network-gate = { path = "../guild-network-gate", default-features = false }
hex = "0.4.3"
parity-scale-codec = { version = "3.2.1", default-features = false } # required for the runtime subxt macro
sp-keyring = { version = "6.0.0", default-features = false }
subxt = "0.24.0"
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_cbor = "0.11.2"
