[package]
name = "guild-network-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["subxt/jsonrpsee-ws"]
external-oracle = []
wasm = ["subxt/jsonrpsee-web"]

[dependencies]
anyhow = "1"
futures = "0.3.25"
log = { version = "0.4.17", default-features = false }
guild-network-common = { path = "../guild-network-common" }
hex = "0.4.3"
parity-scale-codec = { version = "3.2.1", default-features = false } # required for the runtime subxt macro
sp-keyring = { version = "6.0.0", default-features = false }
subxt = { git = "https://github.com/agoraxyz/subxt", branch = "wasm" }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_cbor = "0.11.2"

[dev-dependencies]
ethers = "0.6.2"
rand = { version = "0.8.5", default-features = false, features = ["std_rng"] }
