[package]
name = "guild-network-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["pad"]
pad = []

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
guild-network-gate = { path = "../guild-network-gate", default-features = false }
