[package]
name = "guild-network-common"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
]
with-checks = ["anyhow", "ethers-core", "reqwest", "std"]

[dependencies]
anyhow = { version = "1.0", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
ethers-core = { version = "0.11.0", default-features = false, optional = true }
reqwest = { version = "0.11.11", default-features = false, optional = true }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.144", default-features = false, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
