[package]
authors = ["Shronk <ureshpohar@gmail.com>"]
edition = "2021"
name = "guild-network-gate"
version = "0.1.0"

[features]
default = ["std"]
std = []
with-checks = ["anyhow", "ethers-core", "reqwest", "std"]

[dependencies]
anyhow = { version = "1.0", default-features = false, optional = true }
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false, features = ["derive"] }
ethers-core = { version = "0.11.0", default-features = false, optional = true }
ethereum-types = "0.14.0"
reqwest = { version = "0.11.11", default-features = false, optional = true }
serde = { version = "1.0.144", features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
