[package]
name = "guild-network-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
env_logger = "0.9.0"
futures = "0.3.25"
guild-network-client = { path = "../guild-network-client" }
log = { version = "0.4.17", default-features = false }
sp-keyring = { version = "6.0.0", default-features = false }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
