[package]
name = "guild-network-oracle"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
codec = { package = "parity-scale-codec", version = "3.2.1", default-features = false }
env_logger = "0.9.0"
futures = "0.3.25"
guild-network-client = { path = "../guild-network-client" }
guild-network-common = { path = "../guild-network-common" }
log = { version = "0.4.17", default-features = false }
sp-keyring = { version = "6.0.0", default-features = false }
structopt = { version = "0.3", default-features = false }
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }
