[package]
name = "guild-network-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
guild-network-client = { path = "../guild-network-client", default-features = false, features = ["wasm"] }
guild-network-common = { path = "../guild-network-common" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
