[package]
name = "guild-network-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
console_error_panic_hook = "0.1.7"
guild-network-client = { path = "../guild-network-client", default-features = false, features = ["wasm"] }
guild-network-common = { path = "../guild-network-common" }
tracing-wasm = "0.2.1"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3.24"
