[package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
name = "pallet-chainlink"
version = "3.0.0-alpha"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-std/std",
]

[dependencies]
gn-common = {path = "../../gn-common"}

codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"]}
frame-benchmarking = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25", optional = true}
frame-support = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
frame-system = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
scale-info = {version = "2.1.1", default-features = false, features = ["derive"]}
sp-std = {default-features = false, version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.25"}
