[package]
edition = "2021"
name = "pallet-guild-identity"
version = "0.0.0-alpha"

[features]
default = ["std"]
runtime-benchmarks = []
std = [
	"frame-support/std",
	"frame-system/std",
	"gn-common/std",
	"gn-sig/std",
	"pallet-oracle/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-std/std",
]
try-runtime = []

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../../gn-common", default-features = false }
gn-sig = { version = "0.0.0-alpha", path = "../../gn-sig", default-features = false }
pallet-oracle = { version = "0.0.0-alpha", path = "../pallet-oracle", default-features = false }

# general
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# substrate frame
frame-support = { workspace = true }
frame-system = { workspace = true }

# substrate primitives
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
