[package]
edition = "2021"
name = "pallet-guild"
version = "0.0.0-alpha"

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "pallet-balances",
  "pallet-randomness-collective-flip",
  "sp-core",
  "sp-runtime",
]
std = [
  "gn-common/std",
  "pallet-balances?/std",
  "pallet-oracle/std",
  "pallet-randomness-collective-flip?/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "sp-core?/std",
  "sp-io/std",
  "sp-runtime?/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../../gn-common", default-features = false }
pallet-oracle = { version = "0.0.0-alpha", path = "../pallet-oracle", default-features = false }

# general
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# substrate pallets
pallet-balances = { workspace = true, optional = true }
pallet-randomness-collective-flip = { workspace = true, optional = true }

# substrate frame
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# substrate primitives
sp-core = { workspace = true, optional = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true, optional = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["default"] }
pallet-randomness-collective-flip = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
