[package]
edition = "2021"
name = "pallet-guild"
version = "0.0.0-alpha"

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/runtime-benchmarks",
  "gn-common/test-sig",
]
std = [
  "gn-common/std",
  "pallet-guild-identity/std",
  "pallet-oracle/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  #"sp-io/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../../gn-common", default-features = false }
pallet-guild-identity = { version = "0.0.0-alpha", path = "../pallet-guild-identity", default-features = false }
pallet-oracle = { version = "0.0.0-alpha", path = "../pallet-oracle", default-features = false }

# general
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# substrate pallets
pallet-balances = { workspace = true, optional = true }

# substrate frame
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# substrate primitives
#sp-io = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["default"] }
pallet-randomness-collective-flip = { workspace = true, features = ["default"] }
sp-core = { workspace = true }
sp-runtime = { workspace = true, features = ["default"] }
