[package]
name = "pallet-im-online"
version = "14.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME's I'm online pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
log = { version = "0.4.17", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
frame-benchmarking = { version = "15.0.0", default-features = false, optional = true}
frame-support = { version = "15.0.0", default-features = false}
frame-system = { version = "15.0.0", default-features = false}
pallet-authorship = { version = "15.0.0", default-features = false}
sp-application-crypto = { version = "16.0.0", default-features = false}
sp-core = { version = "15.0.0", default-features = false}
sp-io = { version = "16.0.0", default-features = false}
sp-runtime = { version = "17.0.0", default-features = false}
sp-staking = { version = "13.0.0", default-features = false}
sp-std = { version = "6.0.0", default-features = false}

[dev-dependencies]
pallet-session = { workspace = true }

[features]
default = ["std"]
std = [
	"frame-benchmarking?/std",
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"pallet-authorship/std",
	"scale-info/std",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-staking/std",
	"sp-std/std",
]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
try-runtime = ["frame-support/try-runtime"]
