[package]
edition = "2021"
name = "pallet-oracle"
version = "0.0.0-alpha"

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking/default",
  "pallet-balances/default",
  "sp-core/default",
  "sp-io/default",
  "sp-runtime/default",
]
std = [
  "gn-common/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]

[dependencies]
# local
gn-common = { version = "0.0.0-alpha", path = "../../gn-common", default-features = false }

# general
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# substrate pallets
pallet-balances = { workspace = true, optional = true }

# substrate frame
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true }
frame-system = { workspace = true }

# substrate primitives
sp-core = { workspace = true, optional = true }
sp-runtime = { workspace = true, optional = true }
sp-io = { workspace = true, optional = true }
sp-std = { workspace = true }

[dev-dependencies]
pallet-balances = { workspace = true, features = ["default"] }
sp-core = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }
