[package]
name = "pallet-validator-manager"
version = "0.0.0-alpha"
edition = "2021"

[features]
default = ["std"]
std = [
  "pallet-session/std",
  "parity-scale-codec/std",
  "scale-info/std",
  "frame-support/std",
  "frame-system/std",
  "sp-runtime/std",
  "sp-staking/std",
  "sp-std/std",
]

[dependencies]
# general
parity-scale-codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

# substrate frame
frame-support = { workspace = true }
frame-system = { workspace = true }

# substrate pallets
pallet-session = { workspace = true }

# substrate primitives
sp-runtime = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["default"] }
sp-io = { workspace = true, features = ["default"] }
